# pclass-vectorized

./: .gitignore  .travis.yml  README.md  meson.build  meson_options.txt
.circleci/: config.yml
benchmarks/: 1_tree_lookup.cpp  benchmark_exec_utils.py  check_only_uniq_rules.py  data_structure_benchmarks.py  exact_match_rule_gen.cpp  example_lookup.cpp  graphs.py  hash_table_cls.h  hash_vs_rb_tree_vs_b_tree.cpp  memory_heatmap.py  meson.build  n_tree_lookup.cpp  pcap_gen.py  pcv_mem_efficiency_report.cpp  prefix_combinations.cpp  run_benchmark.h  run_benchmarks.py  run_ovs_data_benchmark.py  tss_like_cls.h
benchmarks/benchmark_utils/: benchmark_exec_utils.py  check_only_uniq_rules.py  graphs.py
benchmarks/dpdk/: dpdk_acl_container.cpp  dpdk_acl_container.h  dpdk_acl_field_defs.cpp  dpdk_acl_field_defs.h  dpdk_test_app_main.cpp  meson.build
benchmarks/list/: list_classifier.h  list_lookup.cpp
benchmarks/ovs/: .gitignore  0001-c-17-compatibility.patch  0001-gcc-9-compatibility.patch  0002-MINIFLOW_GET_TYPE-ignore-asserts-c-compatibility.patch  0002-make-dpcls-api-public.patch  0003-export-internals-of-ovs-dpcls.patch  example_table_lookup.cpp  generate_struct_flow_convertors.py  meson.build  ovs_classifier_random_lookup.cpp  ovs_dpcls_wrap.cpp  ovs_dpcls_wrap.h  ovs_meson.build  ovs_pcv_meson.build  ovs_prepare.sh  ovs_tss_prefix_benchmark.cpp  ovs_wrap.cpp  ovs_wrap.h  rule_ipv4_acl_to_ovs_match.h  table_lookup.cpp  table_lookup_traces.cpp  trace_loader.cpp  trace_loader.h  verif_ovs_list_test.cpp
benchmarks/ovs/ovs_api/: classifier-private.h  classifier-unchanged.c  classifier.cpp  classifier.h  cls-rule.c  struct_flow_conversions.h  struct_flow_packet_spec.cpp
benchmarks/ovs/ovs_api/lib/: dpif-netdev.h
benchmarks/ovs_tss/: 0001_define_typeof.patch  download_ovs.py  find_required_cpp_files.py  meson.build  n_tree_lookup.cpp  ovs_meson.build  table_lookup.cpp
include/pcv/common/: array_hasher.h  array_resorter.h  range.h  rulespec_hasher.h
include/pcv/partition_sort/: b_tree.h  b_tree_cfg.h  b_tree_collision_check.h  b_tree_impl.h  b_tree_insert.h  b_tree_key_iterator.h  b_tree_node.h  b_tree_node_navigator.h  b_tree_printer.h  b_tree_remove.h  b_tree_search.h  b_tree_to_rules.h  dimension_order_resolver.h  dynamic_mempool.h  key_info.h  mempool.h  mempool_dynamic.h  mempool_mock.h  partition_sort_classifier.h  rule_value_int.h  weighted_interval_scheduling_solver.h
include/pcv/partiton_sort/: b_tree.h  b_tree_collision_check.h  b_tree_impl.h  b_tree_insert.h  b_tree_printer.h  b_tree_remove.h  b_tree_search.h  b_tree_search_extra.h  key_info.h  key_iterator.h  mempool.h  mempool_mockup.h  range.h
include/pcv/rule_parser/: classbench_rule_parser.h  rule.h  rule_vec_utils.h  trace_tools.h
include/pcv/utils/: benchmark_common.h  debug_timer.h
src/: classbench_rule_parser.cpp  classbench_rule_parser.h  dpdk_acl_container.cpp  dpdk_acl_container.h  dpdk_acl_field_defs.h  dpdk_acl_rule_dump.h  log.h  meson.build  packet_classifiers_vectorized.cpp
src/partition_sort/: b_tree.cpp  b_tree.h  b_tree_search.cpp  bplus_tree.cpp  bplus_tree.h  mempool.h
src/partiton_sort/: b_tree.cpp  b_tree_collision_check.cpp  b_tree_insert.cpp  b_tree_print.cpp  b_tree_remove.cpp  b_tree_search.cpp
src/rule_parser/: classbench_rule_parser.cpp  rule.cpp  trace_tools.cpp
src/utils/: benchmark_common.cpp  debug_timer.cpp
src_dpdk_test_app/: classbench_rule_parser.cpp  classbench_rule_parser.h  dpdk_acl_container.cpp  dpdk_acl_container.h  dpdk_acl_field_defs.cpp  meson.build
tests/: b_tree_collision_check_test.cpp  b_tree_compression_test.cpp  b_tree_key_iterator_test.cpp  b_tree_test.cpp  classbench_rule_parser_test.cpp  concurrent_update_test.cpp  dimension_order_resolver_test.cpp  layered_b_tree_test.cpp  mempool_test.cpp  meson.build  partition_sort_classifier_test.cpp  range_test.cpp  rule_conversions_test.cpp  test_common.h  verif_pcv_list_test.cpp  weighted_interval_scheduling_solver_test.cpp
tests/data/: acl1_100  acl1_500  openflow_1  simple1_3  simple2_3
